Working version docker-compose setup 7/29

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ dist-ssr
 
 Dockerfile
 docker-compose.yml
+backend/RecitalGeneratorAPI/appsettings.json
+backend/RecitalGeneratorAPI/.env
+frontend/package-lock.json
