--- a/backend/RecitalGeneratorAPI/Properties/launchSettings.json
+++ b/backend/RecitalGeneratorAPI/Properties/launchSettings.json
@@ -20,6 +20,7 @@
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
